<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray_light"
    android:orientation="vertical"
    android:paddingBottom="12dp"
    android:paddingLeft="@dimen/common_padding_medium"
    android:paddingRight="@dimen/common_padding_medium"
    android:paddingTop="12dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:src="@drawable/ratingbet_logo_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/linLayItemDetailsFooterAboutUs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:background="@color/gray_light_more_darker"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/common_padding_medium"
            android:paddingTop="@dimen/common_padding_medium">

            <TextView
                style="@style/SubheadFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_us"
                android:textAllCaps="true" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linLayItemDetailsFooterContacts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_weight="1"
            android:background="@color/gray_light_more_darker"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/common_padding_medium"
            android:paddingTop="@dimen/common_padding_medium">

            <TextView
                style="@style/SubheadFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contacts"
                android:textAllCaps="true" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linLayItemDetailsFooterFullVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_padding_medium"
        android:background="@color/custom_yellow_regular"
        android:gravity="center_horizontal"
        android:paddingBottom="@dimen/common_padding_medium"
        android:paddingTop="@dimen/common_padding_medium">

        <TextView
            style="@style/SubheadFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_version"
            android:textAllCaps="true" />

    </LinearLayout>
</LinearLayout>